Prefer ImmutableList to the convenience methods in List
Fix this warning from JdkImmutableCollections ErrorProne pattern.

Signed-off-by: Edwin Kempin <ekempin@google.com>
Change-Id: I70aa2a6c23dd252a89f1bb09d5e8ac3351a533f3